manifest/objects/LEXMAGICMOVER__NAMNoteConversionStatus__c.object
<CustomObject>
    <fields>
        <fullName>LEXMAGICMOVER__JobId__c</fullName>
        <label>JobId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__Status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>NAMNoteConversionStatus</label>
    <listViews>
        <fullName>LEXMAGICMOVER__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NoteConversionStatus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NAMNoteConversionStatus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>